<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_pop"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/faculty_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_popup"
                android:hint="@string/faculty_pop"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/year_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/faculty_popup"
                android:hint="@string/year_pop"
                android:textSize="18sp" />

            <Button
                android:id="@+id/eng_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/eng"
                android:layout_below="@id/year_popup"/>

            <Button
                android:id="@+id/math_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/math"
                android:layout_below="@id/eng_popup"/>

            <Button
                android:id="@+id/hist_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hist"
                android:layout_marginStart="110dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/year_popup"/>

            <Button
                android:id="@+id/phys_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phys"
                android:layout_marginStart="110dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/hist_popup"/>

            <Button
                android:id="@+id/programming_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/programming"
                android:layout_marginStart="220dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/hist_popup"/>

            <Button
                android:id="@+id/economy_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/economy"
                android:layout_marginTop="10dp"
                android:layout_marginStart="220dp"
                android:layout_below="@id/year_popup"/>

            <Button
                android:id="@+id/save_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_light"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/phys_popup"/>



        </RelativeLayout>







    </androidx.cardview.widget.CardView>





        tools:layout_editor_absoluteY="111dp" />
</LinearLayout>