<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="45dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/conf"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/sure_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_confirmation"
            android:textStyle="bold"
            android:background="@android:color/holo_blue_light"
            android:layout_below="@+id/conf" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_confirmation"
            android:textStyle="bold"
            android:background="@android:color/holo_blue_dark"
            android:layout_below="@+id/conf"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>