<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/student_name_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_pop"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/student_id_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/student_name_row"
                android:text="@string/id_popup"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/student_faculty_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/student_id_row"
                android:text="@string/faculty_pop"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/student_year_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/student_faculty_row"
                android:text="@string/year_pop"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/student_courses_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/student_year_row"
                android:text="@string/courses_row"
                android:textSize="16sp" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/student_year_row"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_delete"
                    android:backgroundTint="@android:color/holo_red_dark" />

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_edit"
                    android:backgroundTint="@android:color/holo_blue_light" />

            </TableRow>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>